<?xml version="1.0"?>
<package>
  <name>migration_example</name>
  <version>1.0.0</version>
  <description>The example for migration</description>
  <maintainer email="chenying.kuo@adlinktech.com">ChenYing Kuo</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
