<?xml version="1.0"?>

<!-- *** ROS 2 needs to specify format version *** -->
<package>
<!--
<package format="2">
-->
  <name>migration_example</name>
  <version>1.0.0</version>
  <description>The example for migration</description>
  <maintainer email="chenying.kuo@adlinktech.com">ChenYing Kuo</maintainer>
  <license>Apache 2.0</license>

<!-- *** ROS 2 uses different build tool *** -->
  <buildtool_depend>catkin</buildtool_depend>
<!--
  <buildtool_depend>ament_cmake</buildtool_depend>
-->

<!-- *** ROS 2 uses different dependency *** -->
  <build_depend>roscpp</build_depend>
<!--
  <build_depend>rclcpp</build_depend>
-->

  <build_depend>std_msgs</build_depend>

<!-- *** ROS 2 uses exec_depend *** -->
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
<!--
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
-->

<!-- *** ROS 2 needs to define build type *** -->
<!--
  <export>
    <build_type>ament_cmake</build_type>
  </export>
-->

</package>
